# TeamFit_Shakya

./: .gitignore  .mcp.json  App_Testing.md  CELERY_REDIS_SETUP.md  CLAUDE.md  CLERK_SUPABASE_INTEGRATION_COMPLETE.md  DATABASE_IMPLEMENTATION_SUMMARY.md  PHASE_2_BACKEND_IMPLEMENTATION.md  PHASE_2_BACKEND_PART2.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_2_PART2_IMPLEMENTATION_COMPLETE.md  PROMPT_1_Database_and_RLS_Policies.md  PROMPT_2_Clerk_Supabase_Integration.md  PROMPT_3_Frontend_Dashboard.md  WEBHOOK_FIX_DOCUMENTATION.md  WEBHOOK_TROUBLESHOOTING_GUIDE.md  database-types.ts  fix-path-priority.ps1
.claude/: settings.local.json
.specify/memory/: constitution.md
Frontend Implementation Plan/Feature 1 Activity Library (Priority 1)/: Plan - Activity Library Page.md  Specify - Activity Library Page.md
backend/: celery_worker.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: __init__.py  activities.py  jobs.py  management.py  materials.py  onboarding.py  webhooks.py
backend/app/services/: ai_service.py  file_service.py  quota_service.py  trust_service.py
backend/app/tasks/: __init__.py  generation_tasks.py
backend/app/utils/: __init__.py  prompts.py  supabase_client.py  user_sync.py
files/: CLAUDE_CODE_PROMPT_AI_FEATURES_DATABASE.md  Missing_Policies.md  TEAMFIT_AI_FEATURES_IMPLEMENTATION_PLAN.md
frontend/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
specs/001-activity-library/: plan.md  (+5 more)
(+120 files in other folders)
